--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>A Portfolio website- Sunny</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alkatra&family=Josefin+Sans&family=Kanit:wght@300&family=Merriweather+Sans:ital@1&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/799a70c90f.js" crossorigin="anonymous"></script>
 </head>
 
@@ -24,7 +27,7 @@
                     <li><a href="#contact">Contact us</a></li>
                     <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
-               <i class="fas fa-bars" onclick="openmenu()"></i>
+                <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="headertext">
                 <p>Full Stack Java Developer</p>
@@ -36,16 +39,16 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/myimage2.jpeg" alt="">
+                        <img src="images/my image.jpg" alt="">
                     </div>
                     <div class="about-col-2">
                         <h1 class="subtitle">About Me</h1>
                         <p id="hello">
-                            I am an enthusiastic, self-motivated, reliable, responsible and hard working person.
-                            I am an extrovert person which easily interact with anyone through my Good communication
-                            skill.
-                            I also good at problem-solving skill. With my development knowledge I am able to solve
-                            real-time problem.
+
+                            I am an enthusiastic, self-motivated, reliable, responsible, and hardworking individual with
+                            excellent problem-solving skills. As an extrovert, I easily engage and communicate with
+                            others, allowing me to interact effectively in various situations. With my development
+                            knowledge, I am capable of resolving real-time issues and tackling challenges efficiently.
 
                         </p>
                         <div class="tabtitle ">
@@ -63,7 +66,8 @@
                         </div>
                         <div class="tabcontent" id="experience">
                             <ul>
-                                <li><span>No Experience</span><br>I'm Fresher and currently working on my skills</li>
+                                <li><span> Internship</span><br>5 weeks of internship in C++ and Data Structure</li>
+                                <li>Currently Working to Enhance my development knowledge</li>
                             </ul>
                         </div>
                         <div class="tabcontent" id="education">
@@ -81,21 +85,24 @@
             <div class="container">
                 <h1 class="subtitle2">My Services</h1>
                 <div class="servicelist">
-                <div>
-                    <h2>website development</h2>
-                    <p>Create Reponsive and  unique website according to your requirement</p>
-                    <a href="#">Learnmore</a>
-                </div>
-                <div>
-                    <h2>Desktop application</h2>
-                    <p>Create Standalone application using java frameework like swing,Java fx</p>
-                    <a href="#">Learnmore</a>
-                </div>
-                <div>
-                    <h2>Portfolio</h2>
-                    <p>Create Reponsive and  unique Portfolio according to your requirement</p>
-                    <a href="#">Learnmore</a>
-                </div>
+                    <div>
+                        <h2>website development</h2>
+                        <p>Develop a customized and responsive website that meets your specific requirements, ensuring
+                            uniqueness in design and functionality.</p>
+                        <a href="#">Learnmore</a>
+                    </div>
+                    <div>
+                        <h2>Desktop application</h2>
+                        <p>Develop a standalone application utilizing Java frameworks such as Swing or JavaFX, focusing
+                            on creating a seamless user experience and efficient functionality</p>
+                        <a href="#">Learnmore</a>
+                    </div>
+                    <div>
+                        <h2>Portfolio</h2>
+                        <p>Design and develop a responsive and distinctive portfolio that caters to your specific needs,
+                            ensuring it stands out and adapts well across different devices and screen sizes.</p>
+                        <a href="#">Learnmore</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -104,33 +111,37 @@
                 <h1 class="subtitle2">My Work</h1>
                 <div class="worklist">
                     <div class="work">
-                    <img src="images/Learning-management-system-info.png" alt="" id="img3">
-                    <div class="layer">
-                     <p>This is Learning-management-system with one to one interaction . 
-                        it will give ease to student and teacher to interact with each other
-                     </p>
-                     <a href="https://github.com/Tonystark7862"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div>
+                        <img src="images/2-1024x576.jpg" alt="" id="img3">
+                        <div class="layer">
+                            <p>A web-based platform refers to an online system or application that operates through web
+                                browsers, allowing users to access and interact with its features and services over the
+                                internet.
+                            </p>
+                            <a href="https://github.com/Tonystark7862"><i
+                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
                     </div>
                     <div class="work">
-                        <img src="images/website.jpg" alt="" id="img1">
+                        <img src="images/ecommerce-website-builder.jpg" alt="" id="img1">
                         <div class="layer">
-                        <p>
-                       This is basic ecommerce website using Html , Css And javascript . It will give 
-                       platform to sell your product online and manage it also.     
-                        </p>
-                        <a href="https://github.com/Tonystark7862"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div>
+                            <p>
+                                This is basic ecommerce website using Html , Css And javascript . It will give
+                                platform to sell your product online and manage it also.
+                            </p>
+                            <a href="https://github.com/Tonystark7862"><i
+                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
                     </div>
                     <div class="work">
                         <img src="images/quiz.jpg" alt="" id="img2">
                         <div class="layer">
-                        <p>
-                        This is java quiz application to organise to MCQ based test for classes and Academy
-                        . This is example of Standalone application.
-                        </p>
-                        <a href="https://github.com/Tonystark7862"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    </div>
+                            <p>
+                                This is java quiz application to organise to MCQ based test for classes and Academy
+                                . This is example of Standalone application.
+                            </p>
+                            <a href="https://github.com/Tonystark7862"><i
+                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,38 +150,39 @@
             <a href="#" class="btn"> See more</a>
         </div>
         <div id="contact">
-         <div class="container">
-            <div class="row">
-                <div class="left">
-                  <h1 class="subtitle2"> Contact Me</h1>
-                  <p><i class="fa-solid fa-envelope"></i>sunnysingh29122001@gmail.com</p>
-                  <p><i class="fa-solid fa-phone"></i>7827743220</p>
-                  <div class="social">
-                    <a href="https://www.instagram.com/sunny_nice123/?next=%2F"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/Tonystark7862"><i class="fa-brands fa-github"></i></a>
-                  </div>
-                <a href="images/resume.pdf" download class="btn btn2">Download CV</a>
-                </div>
-                <div class="right">
-                <form name="submit-to-google-sheet">
-                    <input type="text" name="Name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Your Email" required>
-                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                    <button type="submit" class="btn btn2">Submit</button>
-                </form>
-                <span id="msg"></span>
+            <div class="container">
+                <div class="row">
+                    <div class="left">
+                        <h1 class="subtitle2"> Contact Me</h1>
+                        <p><i class="fa-solid fa-envelope"></i>sunnysingh29122001@gmail.com</p>
+                        <p><i class="fa-solid fa-phone"></i>7827743220</p>
+                        <div class="social">
+                            <a href="https://www.instagram.com/sunny_nice123/?next=%2F"><i
+                                    class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://github.com/Tonystark7862"><i class="fa-brands fa-github"></i></a>
+                        </div>
+                        <a href="images/resume.pdf" download class="btn btn2">Download CV</a>
+                    </div>
+                    <div class="right">
+                        <form name="submit-to-google-sheet">
+                            <input type="text" name="Name" placeholder="Your Name" required>
+                            <input type="email" name="email" placeholder="Your Email" required>
+                            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                            <button type="submit" class="btn btn2 btn3">Submit</button>
+                        </form>
+                        <span id="msg"></span>
+                    </div>
                 </div>
             </div>
-         </div>
         </div>
         <div class="copyright">
             <p>Copyright &#169; 2023 Sunny . All rights reserved.</p>
-        </div> 
+        </div>
     </div>
-   
-   
+
+
     <script>
         var tablinks = document.getElementsByClassName("tablink")
         var tabcontents = document.getElementsByClassName("tabcontent")
@@ -187,10 +199,10 @@
     </script>
     <script>
         var sidemeu = document.getElementById("sidemenu");
-        function openmenu(){
-            sidemeu.style.right="0";
+        function openmenu() {
+            sidemeu.style.right = "0";
         }
-        function closemenu(){
+        function closemenu() {
             sidemeu.style.right = "-200px";
         }
     </script>
@@ -199,18 +211,18 @@
         const form = document.forms['submit-to-google-sheet']
         const msg = document.getElementById("msg");
         form.addEventListener('submit', e => {
-          e.preventDefault()
-          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => {
-                msg.innerHTML="Message sent sucesssfully"
-                setTimeout(function(){
-                  msg.innerHTML=""
-                },5000)
-                form.reset()
-            })
-            .catch(error => console.error('Error!', error.message))
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => {
+                    msg.innerHTML = "Message sent sucesssfully"
+                    setTimeout(function () {
+                        msg.innerHTML = ""
+                    }, 5000)
+                    form.reset()
+                })
+                .catch(error => console.error('Error!', error.message))
         })
-      </script>
+    </script>
 </body>
 
 </html>
